--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
 # Launch the default browser when starting the application in development mode
-vaadin.launch-browser=true
+vaadin.launch-browser=false
 # PostgreSQL configuration.
 spring.datasource.url = jdbc:postgresql://localhost:5432/lighthouse-app-mans-2
 spring.datasource.username = postgres
 spring.datasource.password = postgres
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
 vaadin.allowed-packages = com.vaadin,org.vaadin,com.flux
